--- a/assets/scss/admin-dashboard/_announcements.scss
+++ b/assets/scss/admin-dashboard/_announcements.scss
@@ -33,6 +33,7 @@
     -webkit-column-gap: 20px;
     -moz-column-gap: 20px;
     column-gap: 20px;
+    margin-right: -25px;
     @media only screen and (max-width: 767px) {
       button:last-child {
         margin-top: 10px;
